# native-windows-gui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  build.rs  changelog.md  readme.md  todo.md
.github/: FUNDING.yml
docs/: book_10.html  book_20.html  book_30.html  book_31.html  book_32.html  book_33.html  book_34.html  book_40.html  book_50.html  book_60.html  book_70.html  index.html
docs/api/: search-index.js
docs/book/: appendix.html  basic_tips.html  basics.html  canvas.html  controls_resources.html  custom.html  custom_events.html  datamodel.html  embedding.html  events.html  getting_started.html  idstype.html  intermediate.html  introduction.html  (+3 more)
examples/: canvas.rs  custom.rs  dynamics.rs  flicker_test.rs  multithreading.rs  no_templating.rs  showcase.rs  simple_canvas.rs  simple_form.rs  templating.rs  ui.rs
native-windows-canvas/: Cargo.toml
native-windows-derive/: Cargo.toml
native-windows-derive/src/: base.rs  controls.rs  controls_events.rs  controls_gen.rs  controls_layouts.rs  events.rs  layouts.rs  layouts_new.rs  lib.rs  shared.rs  ui.rs
native-windows-docs/: advanced.html  basics.html  canvas.html  canvas_base.html  controls.html  controls_lib.html  derive.html  dialogs.html  distribute.html  dynamic_control.html  dynamic_event.html  dynamic_events.html  events.html  extern_wrapping.html  getting_started.html  helper.html  index.html  intermediate.html  layouts.html  limitations.html  localization.html  low.html  low_events.html  multithreading.html  nav_update.py  nwd_basics.html  nwd_controls.html  nwd_events.html  nwd_layouts.html  nwd_partial.html  nwd_resources.html  partial.html  resources.html  small.html
native-windows-gui/: .gitignore  Cargo.toml  build.rs  readme.md
native-windows-gui/examples/: .gitignore  basic.rs  basic_barebone.rs  basic_d.rs  basic_drawing_d.rs  basic_layout.rs  basic_layout_d.rs  calculator.rs  calculator_d.rs  clipboard.rs  custom_event_d.rs  custom_font_d.rs  dataview_d.rs  dialog_multithreading_d.rs  drop_files_d.rs  dyn_layout.rs  dyn_layout_d.rs  echo_d.rs  echo_richtext_d.rs  flexbox.rs  flexbox_d.rs  flexbox_dynamic_d.rs  flexbox_sub_layout.rs  generic_d.rs  image_decoder_d.rs  message_bank.rs  message_bank_d.rs  min_max_size_d.rs  month_name_d.rs  notice_basic.rs  opengl_canvas.rs  partial_simple.rs  partials.rs  partials_d.rs  partials_generic_d.rs  plotting_d.rs  rich_label_d.rs  richtextbox_d.rs  self_referencing.rs  splash_screen_d.rs  (+5 more)
native-windows-gui/examples/embed_resources/: build.rs  cargo.toml  embed_resources.exe.manifest  embed_resources.rc
native-windows-gui/examples/embed_resources/src/: main.rs
native-windows-gui/examples/hdpi_plotting/: Cargo.toml  build.rs  hdpi_plotting.exe.manifest  hdpi_plotting.rc
native-windows-gui/examples/hdpi_plotting/src/: main.rs
native-windows-gui/examples/opengl_canvas/: cargo.toml
native-windows-gui/examples/opengl_canvas/src/: main.rs
native-windows-gui/examples/sync-draw/: Cargo.toml
native-windows-gui/examples/sync-draw/src/: data.rs  main.rs  opengl_canvas.rs  shared_memory.rs  win32_event.rs
native-windows-gui/examples/wgpu_canvas/: Cargo.toml
native-windows-gui/examples/wgpu_canvas/models/: suzanne.glb  teapot.glb
native-windows-gui/examples/wgpu_canvas/src/: glb.rs  main.rs  phong.frag  phong.frag.spv  phong.vert  phong.vert.spv
native-windows-gui/src/: common_types.rs  errors.rs  events.rs  lib.rs  tests.rs  tests_bck.rs  tests_layout.rs
native-windows-gui/src/controls/: animation_timer.rs  button.rs  check_box.rs  combo_box.rs  control_base.rs  control_handle.rs  custom_event.rs  date_picker.rs  datetime_picker.rs  extern_canvas.rs  fancy_window.rs  frame.rs  handle_from_control.rs  image_button.rs  image_frame.rs  label.rs  list_box.rs  list_view.rs  menu.rs  message_window.rs  mod.rs  notice.rs  number_select.rs  plotters.rs  progress_bar.rs  radio_button.rs  rich_label.rs  rich_text_box.rs  scroll_bar.rs  status_bar.rs  tab_nav.rs  tabs.rs  text_box.rs  text_input.rs  timer.rs  tooltip.rs  track_bar.rs  tray_notification.rs  treeview.rs  treeview_iterator.rs  (+1 more)
native-windows-gui/src/controls/canvas/: canvas.rs  canvas_draw.rs  canvas_window.rs  mod.rs  resources.rs
native-windows-gui/src/controls/canvas/resources/: base.rs  color.rs  gradient_stop_collection.rs  linear_gradient_brush.rs  mod.rs  solid_brush.rs  stroke_style.rs  types.rs
native-windows-gui/src/controls/canvas/text/: mod.rs  types.rs  write_error.rs  write_factory.rs  write_text_format.rs
native-windows-gui/src/layouts/: box_layout.rs  dyn_layout.rs  flexbox_layout.rs  grid_layout.rs  mod.rs
native-windows-gui/src/locales/: mod.rs  nls.rs
native-windows-gui/src/resources/: bitmap.rs  color_dialog.rs  cursor.rs  embed.rs  file_dialog.rs  font.rs  font_dialog.rs  icon.rs  image.rs  image_decoder.rs  image_list.rs  jpeg.rs  mod.rs  system_images.rs
native-windows-gui/src/tests/: canvas_test.rs  control_test.rs  freeing_test.rs  images_test.rs  mod.rs  other.rs  thread_test.rs
native-windows-gui/src/win32/: base_helper.rs  canvas.rs  clipboard.rs  cursor.rs  extern_canvas.rs  high_dpi.rs  image_decoder.rs  menu.rs  message_box.rs  mod.rs  monitor.rs  plotters_d2d.rs  resources_helper.rs  richedit.rs  tabs.rs  window.rs  window_helper.rs
native-windows-gui/src/winnls/: locale.rs  mod.rs  shared.rs
native-windows-gui/test_rc/: ice.cur
native-windows-wysiwyg/: Cargo.toml  readme.md
native-windows-wysiwyg/src/: gui.rs  main.rs  parser.rs  project.rs
native-windows-wysiwyg/src/gui/: controls.rs  gui_builder.rs  gui_error.rs  gui_shared.rs  gui_task.rs  object_inspector.rs  project_settings_ui.rs  widget_box.rs
native-windows-wysiwyg/src/gui/controls/: labeled_field.rs  left_button.rs  left_button_list.rs
native-windows-wysiwyg/src/gui/gui_builder/: gui_demo.rs
native-windows-wysiwyg/src/parser/: gui_struct.rs  gui_struct_finder.rs  parser_error.rs
showcase/: readme.md
src/: actions.rs  args.rs  constants.rs  cursor.rs  defs.rs  error.rs  events.rs  lib.rs  templates.rs  ui.rs  user_values.rs
tests/: all.rs  base.rs  ui.rs
(+1480 files in other folders)
