[workspace]

members = [
    "native-windows-gui",
    "native-windows-derive",
    "native-windows-canvas",
    "native-windows-gui/examples/opengl_canvas",
    "native-windows-gui/examples/embed_resources",
    "native-windows-gui/examples/sync-draw",
    "native-windows-gui/examples/wgpu_canvas",
    "native-windows-gui/examples/hdpi_plotting",
]

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
