[package]
name = "native-windows-derive"
version = "1.0.2"
authors = ["gdube <gdube.475@gmail.com>"]
edition = "2018"

description = "A very light and simple rust GUI library"

repository = "https://github.com/gabdube/native-windows-gui"
documentation = "https://gabdube.github.io/native-windows-gui/native-windows-docs/index.html"

license = "MIT"

keywords = ["gui", "ui", "windows"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"]}
quote = "1.0"
