[package]
name = "native-windows-gui"
version = "1.0.0"
authors = ["gdube <gdube.475@gmail.com>"]
edition = "2018"

build = "build.rs"
keywords = ["gui", "ui", "windows"]

[dependencies]
winapi = { version = "0.3", features = [
  "winuser", "wingdi", "winbase", "libloaderapi", "processthreadsapi", 
  "errhandlingapi", "winerror", "commctrl", "sysinfoapi", "shobjidl", "combaseapi",
  "commdlg", "d2d1", "objbase", "dwrite", "winnls", "shellapi", "wincodec"] }

bitflags = { version = "1.1.0" }
stretch = "0.3.2"

[dev-dependencies]
native-windows-derive = { path = "../native-windows-derive/" }

[build-dependencies]
winapi-build = "0.1.1"

[features]
file-dialog = []
color-dialog = []
font-dialog = []
datetime-picker = []
progress-bar = []
tabs = []
tree-view = []
fancy-window = []
listbox = []
combobox = []
tray-notification = []
message-window = []
timer = []
notice = []
list-view = []
image-decoder = []
number-select = []
cursor = []
clipboard = []
menu = []
trackbar = []
extern-canvas = []
frame = []
tooltip = []
status-bar = []
winnls = []
textbox = []
rich-textbox = []
image-list = []
no-styling = []
embed-resource = []
all = ["file-dialog", "color-dialog", "font-dialog", "datetime-picker", "progress-bar", "timer", "notice", "list-view", "cursor", "image-decoder",
       "tabs", "tree-view", "fancy-window", "listbox", "combobox", "tray-notification", "message-window", "number-select", "clipboard", "menu", 
       "trackbar", "extern-canvas", "frame", "tooltip", "status-bar", "winnls", "textbox", "rich-textbox", "image-list", "embed-resource"]

[package.metadata.docs.rs]
features = [ "all" ]
all-features = true
