[package]
name = "native-windows-gui"
version = "1.0.5"
authors = ["gdube <gdube.475@gmail.com>"]
edition = "2018"

description = "A very light and simple rust GUI library"

repository = "https://github.com/gabdube/native-windows-gui"
documentation = "https://gabdube.github.io/native-windows-gui/native-windows-docs/index.html"

license = "MIT"

build = "build.rs"
keywords = ["gui", "ui", "windows"]

[dependencies]
winapi = { version = "0.3", features = [
  "winuser", "wingdi", "winbase", "libloaderapi", "processthreadsapi", 
  "errhandlingapi", "winerror", "commctrl", "sysinfoapi", "shobjidl", "combaseapi",
  "commdlg", "d2d1", "objbase", "dwrite", "winnls", "shellapi", "wincodec", "stringapiset"] }

lazy_static = "1.4.0"
bitflags = { version = "1.1.0" }
stretch = { version = "0.3.2", optional = true }
muldiv = { version = "0.2", optional = true }


[dev-dependencies]
native-windows-derive = { path = "../native-windows-derive/" }

[build-dependencies]
winapi-build = "0.1.1"

[features]
default = [ "all" ]
file-dialog = []
color-dialog = []
font-dialog = []
datetime-picker = []
progress-bar = []
tabs = []
tree-view = []
fancy-window = []
listbox = []
combobox = []
tray-notification = []
message-window = []
timer = []
notice = []
list-view = []
image-decoder = []
number-select = []
cursor = []
clipboard = []
menu = []
trackbar = []
extern-canvas = []
frame = []
tooltip = []
status-bar = []
winnls = []
textbox = []
rich-textbox = []
image-list = []
no-styling = []
embed-resource = []
scroll-bar = []
tree-view-iterator = []
flexbox = ["stretch"]
high-dpi = ["muldiv"]
all = ["file-dialog", "color-dialog", "font-dialog", "datetime-picker", "progress-bar", "timer", "notice", "list-view", "cursor", "image-decoder",
       "tabs", "tree-view", "fancy-window", "listbox", "combobox", "tray-notification", "message-window", "number-select", "clipboard", "menu",
       "trackbar", "extern-canvas", "frame", "tooltip", "status-bar", "winnls", "textbox", "rich-textbox", "image-list", "embed-resource", "scroll-bar",
       "tree-view-iterator", "flexbox"]

[package.metadata.docs.rs]
# This also sets the default target to `x86_64-pc-windows-msvc`
features = [ "all" ]
all-features = false
targets = ["x86_64-pc-windows-msvc"]
