[package]
name = "native-windows-wysiwyg"
version = "0.1.0"
authors = ["Gabriel D <gdube.475@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = {path = "../native-windows-gui"}
native-windows-derive = { path = "../native-windows-derive" }
winapi = { version = "0.3", features = ["winuser"] }
toml = "0.5.8"
