[package]
name = "nwg-hdpi-plotting"
version = "1.0.0"
authors = ["gdube <gdube.475@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
plotters = { version = "0.3", default-features=false, features=["all_series", "all_elements"] }
native-windows-gui = {path = "../../", features=["high-dpi"]}
native-windows-derive = {path = "../../../native-windows-derive"}

[build-dependencies]
embed-resource = "1.3"
