[package]
name = "syncdraw"
version = "0.1.0"
authors = ["gdube <gdube.475@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = {path="../..", features=["extern-canvas", "animation-timer", "cursor", "notice", "status-bar"]}
native-windows-derive = {path="../../../native-windows-derive"}
glutin = "0.21"
gl = "0.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "psapi", "processthreadsapi", "synchapi"] }
